--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
         <div class="left">
           <div class="text">
             <h1>We serve high quality foods of all kinds.</h1>
-            <p>Edit this text to make it your own. To edit, simply click directly on the text to start adding your own words. You can move the text.</p>
+            <p>
+              Edit this text to make it your own. To edit, simply click directly
+              on the text to start adding your own words. You can move the text.
+            </p>
             <button>View Menu <i class="bi bi-arrow-right"></i></button>
             <h4>Opening Times</h4>
             <p>Sunday to Saturday  l  09:00 AM to 11:00 PM</p>
@@ -139,13 +142,13 @@
             <p>+9776462441</p>
           </div>
         </div>
-        
+
         <div class="right">
-          <img src="Header Image.png"class="img-fluid" alt="">
+          <img src="Header Image.png" class="img-fluid" alt="" />
           <div class="overlay-hidden">
             <div class="text">
               <h4>Opening Times</h4>
-              <p>Sunday to Saturday  l  09:00 AM to 11:00 PM</p>
+              <p>Sunday to Saturday l 09:00 AM to 11:00 PM</p>
               <h4>Location</h4>
               <p>Master canteen, BBSR , Odisha 752054</p>
               <h4>Call us</h4>
@@ -156,7 +159,39 @@
         <div class="hidden-content">
           <button>View Menu <i class="bi bi-arrow-right"></i></button>
         </div>
+      </div>
 
+      <div class="know-more">
+        <div class="left">
+          <div class="top">
+            <span>KNOW MORE ABOUT US </span>
+            <div class="line"></div>
+          </div>
+          <h1>We source sustainable & line caught Foods</h1>
+          <p>Edit this text to make it your own. To edit, simply click directly on the text to start adding your own words. You can move the text by dragging and dropping the text anywhere on the page.</p>
+          <div class="mid">
+            <div class="item">
+              <h3><i class="bi bi-bar-chart-line-fill"></i> 10+ People</h3>
+              <span>We are Small Team</span>
+              <p>Through True Rich Attended does no end it his mother since favourable.</p>
+            </div>
+            <div class="item">
+              <h3><i class="bi bi-bar-chart-line-fill"></i> 2014</h3>
+              <span>We are From</span>
+              <p>Through True Rich Attended does no end it his mother since favourable.</p>
+            </div>
+            <div class="item">
+              <h3><i class="bi bi-bar-chart-line-fill"></i> 200k</h3>
+              <span>We Served</span>
+              <p>Through True Rich Attended does no end it his mother since favourable.</p>
+            </div>
+          </div>
+          <button>View Menu <i class="bi bi-arrow-right"></i></button>
+        </div>
+        <div class="right">
+          <img src="Know more Image 1.png" class="special" alt="">
+          <img src="Know more Image 2.png"  alt="">
+        </div>
       </div>
     </div>
     <!--  -->
