--- a/index.html
+++ b/index.html
@@ -168,29 +168,101 @@
             <div class="line"></div>
           </div>
           <h1>We source sustainable & line caught Foods</h1>
-          <p>Edit this text to make it your own. To edit, simply click directly on the text to start adding your own words. You can move the text by dragging and dropping the text anywhere on the page.</p>
+          <p>
+            Edit this text to make it your own. To edit, simply click directly
+            on the text to start adding your own words. You can move the text by
+            dragging and dropping the text anywhere on the page.
+          </p>
           <div class="mid">
             <div class="item">
               <h3><i class="bi bi-bar-chart-line-fill"></i> 10+ People</h3>
               <span>We are Small Team</span>
-              <p>Through True Rich Attended does no end it his mother since favourable.</p>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable.
+              </p>
             </div>
             <div class="item">
               <h3><i class="bi bi-bar-chart-line-fill"></i> 2014</h3>
               <span>We are From</span>
-              <p>Through True Rich Attended does no end it his mother since favourable.</p>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable.
+              </p>
             </div>
             <div class="item">
               <h3><i class="bi bi-bar-chart-line-fill"></i> 200k</h3>
               <span>We Served</span>
-              <p>Through True Rich Attended does no end it his mother since favourable.</p>
+              <p>
+                Through True Rich Attended does no end it his mother since
+                favourable.
+              </p>
             </div>
           </div>
           <button>View Menu <i class="bi bi-arrow-right"></i></button>
         </div>
         <div class="right">
-          <img src="Know more Image 1.png" class="special" alt="">
-          <img src="Know more Image 2.png"  alt="">
+          <img src="Know more Image 1.png" class="special" alt="" />
+          <img src="Know more Image 2.png" alt="" />
+        </div>
+      </div>
+
+      <div class="serving">
+        <div class="top">
+          <span>WHAT WE ARE SERVING </span>
+          <div class="line"></div>
+        </div>
+        <div class="title">
+          <h2>We all have to eat, so why not do it beautifully?</h2>
+          <p>
+            Through True Rich Attended does no end it his mother since
+            favourable real had half every him case in packages enquire we up
+            ecstatic.. Through True Rich Attended does no end it his mother
+          </p>
+        </div>
+        <div class="service">
+          <div class="card">
+            <div class="circle">
+              <i class="bi bi-cake"></i>
+            </div>
+            <h1>Quafe Cake</h1>
+            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+          </div>
+          <div class="card">
+            <div class="circle">
+              <i class="bi bi-cup-hot"></i>
+            </div>
+            <h1>Cofee</h1>
+            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+          </div>
+          <div class="card">
+            <div class="circle">
+              <i class="bi bi-egg-fried"></i>
+            </div>
+            <h1>Fast Food</h1>
+            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+          </div>
+          <div class="card">
+            <div class="circle">
+              <i class="bi bi-cup-straw"></i>
+            </div>
+            <h1>Cocktails</h1>
+            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+          </div>
+          <div class="card">
+            <div class="circle">
+              <i class="bi bi-cup-fill"></i>
+            </div>
+            <h1>Grill</h1>
+            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+          </div>
+          <div class="card">
+            <div class="circle">
+              <i class="bi bi-arrow-through-heart"></i>
+            </div>
+            <h1>Snacks</h1>
+            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+          </div>
         </div>
       </div>
     </div>
