--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
@@ -124,7 +130,7 @@
     </nav>
 
     <!-- Container -->
-    <div class="main-container">
+    <div class="main-container container">
       <div class="header">
         <div class="left">
           <div class="text">
@@ -199,7 +205,9 @@
               </p>
             </div>
           </div>
-          <button>View Menu <i class="bi bi-arrow-right"></i></button>
+          <div class="btn">
+            <button>View Menu <i class="bi bi-arrow-right"></i></button>
+          </div>
         </div>
         <div class="right">
           <img src="Know more Image 1.png" class="special" alt="" />
@@ -226,48 +234,248 @@
               <i class="bi bi-cake"></i>
             </div>
             <h1>Quafe Cake</h1>
-            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+            <p>
+              Through True Rich Attended no end it his mother since favourable
+              real had half every him.
+            </p>
           </div>
           <div class="card">
             <div class="circle">
               <i class="bi bi-cup-hot"></i>
             </div>
             <h1>Cofee</h1>
-            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+            <p>
+              Through True Rich Attended no end it his mother since favourable
+              real had half every him.
+            </p>
           </div>
           <div class="card">
             <div class="circle">
               <i class="bi bi-egg-fried"></i>
             </div>
             <h1>Fast Food</h1>
-            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+            <p>
+              Through True Rich Attended no end it his mother since favourable
+              real had half every him.
+            </p>
           </div>
           <div class="card">
             <div class="circle">
               <i class="bi bi-cup-straw"></i>
             </div>
             <h1>Cocktails</h1>
-            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+            <p>
+              Through True Rich Attended no end it his mother since favourable
+              real had half every him.
+            </p>
           </div>
           <div class="card">
             <div class="circle">
               <i class="bi bi-cup-fill"></i>
             </div>
             <h1>Grill</h1>
-            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+            <p>
+              Through True Rich Attended no end it his mother since favourable
+              real had half every him.
+            </p>
           </div>
           <div class="card">
             <div class="circle">
               <i class="bi bi-arrow-through-heart"></i>
             </div>
             <h1>Snacks</h1>
-            <p>Through True Rich Attended no end it his mother since favourable real had half every him.</p>
+            <p>
+              Through True Rich Attended no end it his mother since favourable
+              real had half every him.
+            </p>
           </div>
         </div>
+      </div>
+      <div class="our-menu">
+        <div class="top">
+          <span>OUR MENU </span>
+          <div class="line"></div>
+        </div>
+        <div class="title">
+          <div class="left">
+            <h1>Discover</h1>
+            <h1>Our Menu Chart</h1>
+            <span>Most Popular Picks</span>
+          </div>
+          <div class="right">
+            <p>
+              Through True Rich Attended does no end it his mother since
+              favourable real had half every him case in packages enquire we up
+              ecstatic.. Through True Rich Attended does no end it his mother
+            </p>
+          </div>
+        </div>
+        <div class="menu">
+          <div class="row">
+            <div class="col-sm">
+              <img
+                src="https://assets.website-files.com/613206902d91d80042c2fb56/614852cdf0a64ebd600dbcb1_Drp%20Coffee.jpg"
+                alt=""
+              />
+              <div class="title">
+                <div class="text">
+                  <span>Drp Coffee</span>
+                </div>
+                <div class="price">$ 8.85</div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <img
+                src="https://assets.website-files.com/613206902d91d80042c2fb56/613207b2f568ed88e55dd71d_Choco%20Cup%20Cake-p-800.jpeg"
+                alt=""
+              />
+              <div class="title">
+                <div class="text">
+                  <span>Choco Cup Cake</span>
+                </div>
+                <div class="price">$ 4.85</div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <img
+                src="https://assets.website-files.com/613206902d91d80042c2fb56/613207cda690ee3e96586d69_Chicken%20Burger-p-500.jpeg"
+                alt=""
+              />
+              <div class="title">
+                <div class="text">
+                  <span>Chicken Burger</span>
+                </div>
+                <div class="price">$ 8.85</div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm">
+              <img
+                src="https://assets.website-files.com/613206902d91d80042c2fb56/614853716cd88ba6cccaec5a_French%20Fries.jpg"
+                alt=""
+              />
+              <div class="title">
+                <div class="text">
+                  <span>French Fries</span>
+                </div>
+                <div class="price">$ 7.85</div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <img
+                src="https://assets.website-files.com/613206902d91d80042c2fb56/61320868d88ba2443c8656ec_Sandwich.jpg"
+                alt=""
+              />
+              <div class="title">
+                <div class="text">
+                  <span>Sandwich</span>
+                </div>
+                <div class="price">$ 3.97</div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <img
+                src="https://assets.website-files.com/613206902d91d80042c2fb56/6132088857e0dd758acd88e6_Chinese%20Soup.jpg"
+                alt=""
+              />
+              <div class="title">
+                <div class="text">
+                  <span>Chinese Soup</span>
+                </div>
+                <div class="price">$ 8.85</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn">
+          <button>View Menu <i class="bi bi-arrow-right"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="quote">
+      <div class="left">
+        <h1>''</h1>
+        <span
+          >Edit this text to make it your own. To edit, simply click directly on
+          the text to start adding your own words. You can move the text by
+          dragging and dropping the text
+        </span>
+        <div class="author">
+          <div class="text">
+            <h4>Joheny Andro</h4>
+            <p>Bhubaneswar, Odisha</p>
+          </div>
+          <div class="avatar">
+            <img
+              src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/613b62a9f18a7512d3eb2d28_Client%20Icon.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <div class="right">
+        <img
+          src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/6138c6ed8486d824ec233481_video-testimonial-placeholder-p-1080.jpeg"
+          alt=""
+        />
+        <i class="bi bi-play-fill"></i>
+      </div>
+    </div>
+
+    <div class="blog container">
+      <h1>Read Our Latest Blogs</h1>
+      <div class="wrap">
+        <div class="card item">
+          <div class="card-body">
+            <div class="day">Sep 20, 2021</div>
+            <div class="title"><h3>Extra Thick Homemade Pizza Sauce</h3></div>
+            <div class="desc">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page.
+              </p>
+            </div>
+            
+          </div>
+          <img class="image" src="https://assets.website-files.com/613206902d91d80042c2fb56/613b68864c8689b2b491fa5b_latest-blog-thumbnail-3.jpg" alt="">
+        </div>
+        <div class="card item">
+          <div class="card-body">
+            <div class="day">Sep 20, 2021</div>
+            <div class="title"><h3>Extra Thick Homemade Pizza Sauce</h3></div>
+            <div class="desc">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page.
+              </p>
+            </div>
+            
+          </div>
+          <img class="image" src="https://assets.website-files.com/613206902d91d80042c2fb56/613b685db6521239919d6493_latest-blog-thumbnail-2.jpg" alt="">
+        </div>
+        <div class="card item">
+          <div class="card-body">
+            <div class="day">Sep 20, 2021</div>
+            <div class="title"><h3>Extra Thick Homemade Pizza Sauce</h3></div>
+            <div class="desc">
+              <p>
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page.
+              </p>
+            </div>
+          </div>
+          <img class="image" src="https://assets.website-files.com/613206902d91d80042c2fb56/613602ad4663e51fc954006d_latest-blog-thumbnail-1.jpg" alt="">
+        </div>
+      </div>
+      <div class="hidden-content">
+        <i class="bi bi-arrow-left btn1-left"></i>
+        <i class="bi bi-arrow-right btn1-right"></i>
       </div>
     </div>
     <!--  -->
 
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
