--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
 
     <div class="blog container">
       <h1>Read Our Latest Blogs</h1>
-      <div class="wrap">
-        <div class="card item">
+      <div class="wrap-slide">
+        <div class="card">
           <div class="card-body">
             <div class="day">Sep 20, 2021</div>
             <div class="title"><h3>Extra Thick Homemade Pizza Sauce</h3></div>
@@ -437,28 +437,38 @@
                 by the readable content of a page.
               </p>
             </div>
-            
           </div>
-          <img class="image" src="https://assets.website-files.com/613206902d91d80042c2fb56/613b68864c8689b2b491fa5b_latest-blog-thumbnail-3.jpg" alt="">
+          <img
+            class="image"
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613b68864c8689b2b491fa5b_latest-blog-thumbnail-3.jpg"
+            alt=""
+          />
         </div>
-        <div class="card item">
+
+        <div class="card">
           <div class="card-body">
             <div class="day">Sep 20, 2021</div>
-            <div class="title"><h3>Extra Thick Homemade Pizza Sauce</h3></div>
+            <div class="title"><h3>The Best Way to Store Fresh Herbs</h3></div>
             <div class="desc">
               <p>
                 It is a long established fact that a reader will be distracted
                 by the readable content of a page.
               </p>
             </div>
-            
           </div>
-          <img class="image" src="https://assets.website-files.com/613206902d91d80042c2fb56/613b685db6521239919d6493_latest-blog-thumbnail-2.jpg" alt="">
+          <img
+            class="image"
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613b685db6521239919d6493_latest-blog-thumbnail-2.jpg"
+            alt=""
+          />
         </div>
-        <div class="card item">
+
+        <div class="card">
           <div class="card-body">
             <div class="day">Sep 20, 2021</div>
-            <div class="title"><h3>Extra Thick Homemade Pizza Sauce</h3></div>
+            <div class="title">
+              <h3>5 ways to prepare porridge for your breakfast</h3>
+            </div>
             <div class="desc">
               <p>
                 It is a long established fact that a reader will be distracted
@@ -466,7 +476,11 @@
               </p>
             </div>
           </div>
-          <img class="image" src="https://assets.website-files.com/613206902d91d80042c2fb56/613602ad4663e51fc954006d_latest-blog-thumbnail-1.jpg" alt="">
+          <img
+            class="image"
+            src="https://assets.website-files.com/613206902d91d80042c2fb56/613602ad4663e51fc954006d_latest-blog-thumbnail-1.jpg"
+            alt=""
+          />
         </div>
       </div>
       <div class="hidden-content">
@@ -474,8 +488,49 @@
         <i class="bi bi-arrow-right btn1-right"></i>
       </div>
     </div>
+    <div class="map container">
+      <div class="left">
+        <h3>Working Hours</h3>
+        <p>Sunday to Saturday</p>
+        <p>09:00 AM to 11:00 PM</p>
+
+        <h3>Location</h3>
+        <p>Street - 127, New York, United States</p>
+        <p>546544</p>
+
+        <h3>Contact Us</h3>
+        <p>+123456789</p>
+        <p>hey@yourdomain.com</p>
+      </div>
+      <div class="right">
+        <div id="googleMap" style="width: 100%; height: 100%"></div>
+      </div>
+    </div>
+    <div class="footer container">
+      <div class="top">
+        <h2>{Finsweet</h2>
+      </div>
+      <div class="menu">
+        <p>Home</p>
+        <p>Menu</p>
+        <p>Our Story</p>
+        <p>About us</p>
+        <p>Blog</p>
+        <p>Contact Us</p>
+      </div>
+      <div class="line"></div>
+      <div class="bottom">
+        <span>© 2023 Client-first</span>
+        <div class="icon">
+          <i class="bi bi-facebook"></i> <i class="bi bi-twitter"></i
+          ><i class="bi bi-instagram"></i> <i class="bi bi-linkedin"></i>
+        </div>
+        <span style="font-weight: 700;">Clone project </span>
+      </div>
+    </div>
     <!--  -->
 
     <script type="text/javascript" src="index.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqQVjuk3Enj20UZ_9QY4YUmrq_Q9OA8cQ&callback=myMap"></script>
   </body>
 </html>
