--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <h1 class="navbar-brand">{finsweet</h1>
         <!-- responsive navbar button for menu -->
-        <button
+        <!-- <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -95,8 +95,29 @@
             <i class="bi bi-percent"></i>
             <span>Blog</span>
           </div>
+        </div> -->
+        <div class="dropdown ">
+          <button
+            class="btn btn-secondary navbar-toggler "
+            data-bs-target="#navbarSupportedContent"
+            data-bs-toggle="collapse"
+            type="button"
+            id="dropdownMenuButton"
+            data-toggle="dropdown"
+            aria-controls="navbarSupportedContent"
+            aria-haspopup="true"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          ><i class="bi bi-list"></i></button>
+          <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Home</a>
+            <a class="dropdown-item" href="#">Menu</a>
+            <a class="dropdown-item" href="#">Pricing</a>
+            <a class="dropdown-item" href="#">Pricing</a>
+            <a class="dropdown-item" href="#">Pricing</a>
+            <a class="dropdown-item" href="#">Pricing</a>
+          </div>
         </div>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
@@ -525,12 +546,27 @@
           <i class="bi bi-facebook"></i> <i class="bi bi-twitter"></i
           ><i class="bi bi-instagram"></i> <i class="bi bi-linkedin"></i>
         </div>
-        <span style="font-weight: 700;">Clone project </span>
+        <span style="font-weight: 700">Clone project </span>
       </div>
     </div>
     <!--  -->
 
     <script type="text/javascript" src="index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqQVjuk3Enj20UZ_9QY4YUmrq_Q9OA8cQ&callback=myMap"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
