--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
             <a class="dropdown-item" href="#">Home</a>
             <a class="dropdown-item" href="#">Menu</a>
             <a class="dropdown-item" href="#">Pricing</a>
-            <a class="dropdown-item" href="#">Pricing</a>
-            <a class="dropdown-item" href="#">Pricing</a>
-            <a class="dropdown-item" href="#">Pricing</a>
+            <a class="dropdown-item" href="#">About Us</a>
+            <a class="dropdown-item" href="#">Our Story</a>
+            <a class="dropdown-item" href="#">Blog</a>
+            <a class="dropdown-item" href="#">Contact</a>
           </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
