--- a/index.html
+++ b/index.html
@@ -468,24 +468,29 @@
     </div>
     <div class="footer container">
       <div class="top">
-        <h2>{Finsweet</h2>
+        <h2>{finsweet</h2>
       </div>
       <div class="menu">
         <p>Home</p>
         <p>Menu</p>
-        <p>Our Story</p>
         <p>About us</p>
+        <p>Our Story</p>
         <p>Blog</p>
         <p>Contact Us</p>
       </div>
-      <div class="line"></div>
-      <div class="bottom">
-        <span>© 2023 Client-first</span>
-        <div class="icon">
+
+      
+
+    </div>
+    <div class="line"></div>
+    <div class="footer-bottom">
+      <div class="bottom container">
+        <span class="title" >© 2021 Finsweet | All rights reserved.</span>
+        <div class="icon" >
           <i class="bi bi-facebook"></i> <i class="bi bi-twitter"></i
           ><i class="bi bi-instagram"></i> <i class="bi bi-linkedin"></i>
         </div>
-        <span style="font-weight: 700">Clone project </span>
+        <span class="bottom-of-bottom" >Clone project  <i class="bi bi-arrow-right" style="color: #ffc492"></i></span>
       </div>
     </div>
     <!--  -->
