--- a/index.html
+++ b/index.html
@@ -374,6 +374,9 @@
             />
           </div>
         </div>
+        <div class="line">
+          <div class="avatar-line"></div>
+        </div>
       </div>
       <div class="right">
         <img
