--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
         </div>
         <div class="title">
           <div class="left">
-            <h1>Discover</h1>
-            <h1>Our Menu Chart</h1>
+            <h1>Discover Our Menu Chart</h1>
+            <h1></h1>
             <span>Most Popular Picks</span>
           </div>
           <div class="right">
