--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
   </head>
@@ -34,9 +41,9 @@
       <div class="container">
         <h1 class="navbar-brand">{finsweet</h1>
         <!-- responsive navbar button for menu -->
-        <div class="dropdown ">
+        <div class="dropdown">
           <button
-            class="btn btn-secondary navbar-toggler "
+            class="btn btn-secondary navbar-toggler"
             data-bs-target="#navbarSupportedContent"
             data-bs-toggle="collapse"
             type="button"
@@ -46,8 +53,10 @@
             aria-haspopup="true"
             aria-expanded="false"
             aria-label="Toggle navigation"
-          ><i class="bi bi-list"></i></button>
-          <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+          >
+            <i class="bi bi-list"></i>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Home</a>
             <a class="dropdown-item" href="#">Menu</a>
             <a class="dropdown-item" href="#">Pricing</a>
@@ -481,19 +490,18 @@
         <p>Blog</p>
         <p>Contact Us</p>
       </div>
-
-      
-
     </div>
     <div class="line"></div>
     <div class="footer-bottom">
       <div class="bottom container">
-        <span class="title" >© 2021 Finsweet | All rights reserved.</span>
-        <div class="icon" >
+        <span class="title">© 2021 Finsweet | All rights reserved.</span>
+        <div class="icon">
           <i class="bi bi-facebook"></i> <i class="bi bi-twitter"></i
           ><i class="bi bi-instagram"></i> <i class="bi bi-linkedin"></i>
         </div>
-        <span class="bottom-of-bottom" >Clone project  <i class="bi bi-arrow-right" style="color: #ffc492"></i></span>
+        <span class="bottom-of-bottom"
+          >Clone project <i class="bi bi-arrow-right" style="color: #ffc492"></i
+        ></span>
       </div>
     </div>
     <!--  -->
