--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Home</a>
-            <a class="dropdown-item" href="#">Menu</a>
+            <a class="dropdown-item" href="menu.html">Menu</a>
             <a class="dropdown-item" href="#">Pricing</a>
             <a class="dropdown-item" href="#">About Us</a>
             <a class="dropdown-item" href="#">Our Story</a>
@@ -73,7 +73,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing </a>
@@ -364,36 +364,39 @@
     </div>
 
     <div class="quote">
-      <div class="left">
-        <h1>''</h1>
-        <span
-          >Edit this text to make it your own. To edit, simply click directly on
-          the text to start adding your own words. You can move the text by
-          dragging and dropping the text
-        </span>
-        <div class="author">
-          <div class="text">
-            <h4>Joheny Andro</h4>
-            <p>Bhubaneswar, Odisha</p>
+      <div class="container">
+        <div class="left">
+          <h1>''</h1>
+          <span
+            >Edit this text to make it your own. To edit, simply click directly on
+            the text to start adding your own words. You can move the text by
+            dragging and dropping the text
+          </span>
+          <div class="author">
+            <div class="text">
+              <h4>Joheny Andro</h4>
+              <p>Bhubaneswar, Odisha</p>
+            </div>
+            <div class="avatar">
+              <img
+                src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/613b62a9f18a7512d3eb2d28_Client%20Icon.png"
+                alt=""
+              />
+            </div>
           </div>
-          <div class="avatar">
-            <img
-              src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/613b62a9f18a7512d3eb2d28_Client%20Icon.png"
-              alt=""
-            />
+          <div class="line">
+            <div class="avatar-line"></div>
           </div>
         </div>
-        <div class="line">
-          <div class="avatar-line"></div>
+        <div class="right">
+          <img
+            src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/6138c6ed8486d824ec233481_video-testimonial-placeholder-p-1080.jpeg"
+            alt=""
+          />
+          <i class="bi bi-play-fill"></i>
         </div>
       </div>
-      <div class="right">
-        <img
-          src="https://assets.website-files.com/60ffe51e69f4b35fb7bffc4c/6138c6ed8486d824ec233481_video-testimonial-placeholder-p-1080.jpeg"
-          alt=""
-        />
-        <i class="bi bi-play-fill"></i>
-      </div>
+
     </div>
 
     <div class="blog container">
