update menu, know more

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Home</a>
             <a class="dropdown-item" href="menu.html">Menu</a>
-            <a class="dropdown-item" href="#">Pricing</a>
-            <a class="dropdown-item" href="#">About Us</a>
+            <a class="dropdown-item" href="know-more.html">About Us</a>
             <a class="dropdown-item" href="#">Our Story</a>
             <a class="dropdown-item" href="#">Blog</a>
             <a class="dropdown-item" href="#">Contact</a>
@@ -76,10 +75,7 @@
               <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="know-more.html">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Our Story</a>
